# qtools

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  constants.py  infer.py  pyproject.toml  train.py  triton_info.md  utils.py
.dvc/: config
configs/: config.yaml
data/: .gitignore  imagewoof.dvc
examples/: client.py  export_model.py  infer.py  train.py  utils.py
qtools/: metrics.py  models.py  ptq.py
triton/: docker-compose.yml
triton/model_repository/onnx-resnet18/: config.pbtxt
triton/model_repository/onnx-resnet18/1/: model.onnx.dvc
